# CSC8508-Group-Project

./: .gitignore  CMakeLists.txt  README.md
Assets/Data/: Maze.txt
Assets/Meshes/: box.fbx  box2.fbx  box3.fbx  corridor_wall.fbx  corridor_wall.mtl  corridor_wall2.fbx  corridor_wall3.fbx  corridor_wall_4.fbx  corridor_wall_5.fbx  corridor_wall_6.fbx  corridor_wall_7.fbx  corridor_wall_8.fbx  corridor_wall_9.fbx
Assets/Shaders/: GameTechFrag.frag  GameTechFrag.glsl  GameTechShader.set  GameTechShadowFrag.glsl  GameTechShadowVert.glsl  GameTechVert.vert  InitEffectFrag.glsl  InitEffectShader.set  LoadingShader.set  PaintEffectFrag.glsl  PaintEffectShader.set  PaintEffectVert.glsl  SimpleFrag.frag  SimpleFrag.glsl  SimpleVert.glsl  SimpleVert.vert
Assets/Shaders/VK/: GameTechFrag.spv  GameTechVert.spv  SimpleFrag.spv  SimpleVert.spv
cmake/: CMakeMacros.cmake  CMakePlatforms.cmake  CMakePlugin.cmake  CMakeSettings.cmake  Toolchain-PS4.cmake
src/: CMakeLists.txt
src/Audio/: AudioManager.cpp  AudioManager.h  CMakeLists.txt  common.cpp  common.h  common_platform.cpp  common_platform.h
src/Bullet/debug/lib/: Bullet3Common_Debug.lib  BulletInverseDynamics_Debug.lib  LinearMath_Debug.lib
src/Bullet/include/bullet/LinearMath/: btDefaultMotionState.h
src/Bullet/lib/: Bullet3Common.lib  BulletInverseDynamics.lib  LinearMath.lib
src/Bullet/share/bullet/: Bullet3CommonTargets-debug.cmake  Bullet3CommonTargets-release.cmake  Bullet3CommonTargets.cmake  BulletCollisionTargets-debug.cmake  BulletCollisionTargets-release.cmake  BulletCollisionTargets.cmake  BulletConfig.cmake  BulletConfigVersion.cmake  BulletDynamicsTargets-debug.cmake  BulletDynamicsTargets-release.cmake  BulletDynamicsTargets.cmake  BulletInverseDynamicsTargets-debug.cmake  BulletInverseDynamicsTargets-release.cmake  BulletInverseDynamicsTargets.cmake  BulletSoftBodyTargets-debug.cmake  BulletSoftBodyTargets-release.cmake  BulletSoftBodyTargets.cmake  LinearMathTargets-debug.cmake  LinearMathTargets-release.cmake  LinearMathTargets.cmake
src/Bullet/share/bullet3/: vcpkg_abi_info.txt
src/Bullet/share/vcpkg-cmake/: vcpkg_abi_info.txt
src/Bullet/share/vcpkg-cmake-config/: vcpkg_abi_info.txt
src/CSC8503/: CMakeLists.txt  GameLoadingRenderer.cpp  GameLoadingRenderer.h  GameTechRenderer.cpp  GameTechRenderer.h  GameWorld.cpp  GameWorld.h  PushdownMachine.cpp  PushdownMachine.h  PushdownState.h  State.h  StateMachine.cpp  StateMachine.h  StateTransition.h  Transform.h
src/DebugMode/: CMakeLists.txt  DebugMode.cpp  DebugMode.h  Tasks.h
src/GUI/: CMakeLists.txt  GameMenu.h  GameUI.cpp  GameUI.h  MainMenu.cpp  MainMenu.h  PauseMenu.cpp  PauseMenu.h  SettingMenu.h
src/Networking-ENet/Debug/: Networking-ENet.idb
src/Networking-ENet/Debug/Networking-ENet.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
src/OpenGLRendering/: CMakeLists.txt  OGLComputeShader.cpp  OGLMesh.cpp  OGLMesh.h  OGLRenderer.cpp  OGLRenderer.h  OGLShader.cpp  OGLShader.h  OGLTexture.cpp  OGLTexture.h  glad.c
src/OpenGLRendering/Debug/: OpenGLRendering.idb
src/OpenGLRendering/Debug/OpenGLRendering.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  OpenGLRendering.lastbuildstate
src/OpenGLRendering/KHR/: CMakeLists.txt
src/OpenGLRendering/glad/: glad.h
src/Physics/: CMakeLists.txt  PhysicsObject.cpp  PhysicsObject.h  PhysicsTestScene.cpp  PhysicsTestScene.h  VkTechRenderer.cpp  VkTechRenderer.h
src/PlayStation4/: CMakeLists.txt
src/VulkanRendering/: CMakeLists.txt  VulkanDebugger.cpp  VulkanDebugger.h  VulkanMesh.cpp  VulkanMesh.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanShader.cpp  VulkanShader.h  VulkanShaderBuilder.cpp  VulkanTexture.cpp  VulkanTexture.h  VulkanUtility.h  vk_layer_settings.txt
src/common/: Assets.cpp  Assets.h  CMakeLists.txt  Camera.cpp  Camera.h  Keyboard.h  Maths.h  MeshGeometry.cpp  MeshGeometry.h  RenderObject.cpp  RenderObject.h  RendererBase.cpp  RendererBase.h  TextureBase.h  TextureLoader.cpp  Win32Window.cpp  Win32Window.h  Window.cpp
src/game/: AssetsManager.cpp  AssetsManager.h  Bullet.cpp  Bullet.h  BulletPool.cpp  BulletPool.h  CMakeLists.txt  Controls.h  ControlsCommand.h  Game.cpp  Game.h  GameEntity.cpp  GameEntity.h  Items.cpp  Items.h  LevelGen.cpp  LevelGen.h  Painter.cpp  Painter.h  Player.cpp  Player.h  PlayerInput.h  TransformConverter.h  Wall.h  main.cpp  wall.cpp
src/imgui/: CMakeLists.txt
src/imgui/backends/: imgui_impl_opengl3.cpp  imgui_impl_win32.cpp
