cmake_minimum_required(VERSION 3.22.1)
project(Group-Project)

#Common Component
add_library(Common STATIC
	Assets.cpp
	Camera.cpp
	GameTimer.cpp
	Keyboard.cpp
	Maths.cpp
	Matrix2.cpp
	Matrix3.cpp
	MeshAnimation.cpp
	MeshGeometry.cpp
	MeshMaterial.cpp
	Mouse.cpp
	Plane.cpp
	Quaternion.cpp
	RenderObject.cpp
	RendererBase.cpp
	ShaderBase.cpp
	SimpleFont.cpp
	TextureBase.cpp
	TextureLoader.cpp
	TextureWriter.cpp
	Vector2.cpp
	Vector3.cpp
	Vector4.cpp
	Win32Keyboard.cpp
	Win32Mouse.cpp
	Win32Window.cpp
	Window.cpp

	Assets.h
	Camera.h
	GameTimer.h
	Keyboard.h
	Maths.h
	Matrix2.h
	Matrix3.cpp
	Matrix3.h
	Matrix4.cpp
	Matrix4.h
	MeshAnimation.h
	MeshGeometry.h
	MeshMaterial.h
	Mouse.h
	Plane.h
	Quaternion.h
	RenderObject.h
	RendererBase.h
	ShaderBase.h
	SimpleFont.h
	TextureBase.h
	TextureLoader.h
	TextureWriter.h
	Vector2.h
	Vector3.h
	Vector4.h
	Win32Keyboard.h
	Win32Mouse.h
	Win32Window.h
	Window.h
)